[project]
name = "langraph"
version = "0.1.0"
description = ""
authors = [
    {name = "Saif Ullah",email = "saifu0905@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langgraph (>=1.1.3,<2.0.0)",
    "ipython (>=9.11.0,<10.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "langchain-ollama (>=1.1.0,<2.0.0)",
    "langchain-openai (>=1.1.12,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-core (>=1.2.31,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
